--- a/Manisfest-files/postgres-deployment.yaml
+++ b/Manisfest-files/postgres-deployment.yaml
@@ -24,7 +24,10 @@ spec:
         - containerPort: 5432
         volumeMounts:
         - name: postgres-data
-          mountPath: /var/lib/postgresql/data
+          mountPath: /var/lib/postgresql/data/pgdata
+        env:
+        - name: PGDATA
+          value: /var/lib/postgresql/data/pgdata
       volumes:
       - name: postgres-data
         persistentVolumeClaim:
