--- a/Manisfest-files/postgres-pvc.yaml
+++ b/Manisfest-files/postgres-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pvc
+  name: postgres-pvc-new
 spec:
   accessModes:
     - ReadWriteOnce
@@ -9,3 +9,4 @@ spec:
     requests:
       storage: 5Gi
   storageClassName: standard
+
